Convert to using Swagger VisualTerrainType
